package entitee.personnage.classe;

import equipement.Equipement;

public abstract class Classe {
    public abstract int getPV();
    public abstract Equipement[] getEquipement();
}
