package entitee.personnage.race;

public abstract class Race {
    public abstract int[] getStats();
    public abstract int getPv();
    public abstract int getForce();
    public abstract int getDex();
    public abstract int getVitesse();
    public abstract int getInitiative();
}
