package interactionUtilisateur;

public class Affichage {
}
